--- a/hardcontrol/templates/hardcontrol/index.html
+++ b/hardcontrol/templates/hardcontrol/index.html
@@ -31,6 +31,8 @@
               <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#hard">Выбрать</button>
           </p>
         </div>
+
+        <div id="hardw_list_output">
        <div class="media text-muted pt-3">
           <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
             <div class="d-flex justify-content-between align-items-center w-100">
@@ -66,6 +68,7 @@
             </div>
             <span class="d-block">Описание оборудования 4</span>
           </div>
+        </div>
         </div>
         <small class="d-block text-right mt-3">
                 <button type="button" class="btn btn-outline-success">Выдать оборудование</button>
@@ -107,10 +110,17 @@
       </div>
       <div class="modal-body">
         <p>Оборудование:</p>
+          <select name="hardw_id" class="form-control">
+
+              {% for item in  hardw_list %}
+                <option value="{{item.id}}">{{ item.title }}</option>
+              {% endfor %}
+
+          </select>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
-        <button type="button" class="btn btn-primary">Выбрать</button>
+        <button type="button" class="btn btn-primary" id="select_hardw">Выбрать</button>
       </div>
     </div>
   </div>
