--- a/hardcontrol/templates/base.html
+++ b/hardcontrol/templates/base.html
@@ -77,6 +77,19 @@
 
   <script language="JavaScript">
 
+        function rem_item(id)
+        {
+
+            $("#item"+id).remove();
+
+            $('#hardw_select_id option[value='+id+']').css('display','block');
+
+
+        }
+
+
+
+
       $(document).ready(function(){
 
           //Выбор оборудования вручную
@@ -84,9 +97,67 @@
           $('#select_hardw').click(function () {
 
 
-              $('#hardw_list_output').append('');
+              var hard_name = $('#hardw_select_id').find('option:selected').text();
+              var hard_id = $('#hardw_select_id').find('option:selected').val();
 
 
+
+              $('#hardw_list_output').append(' <div id="item'+hard_id+'" class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">\n' +
+                  '            <div class="d-flex justify-content-between align-items-center w-100">\n' +
+                  '              <strong class="text-gray-dark">'+hard_name+'</strong>\n' +
+                  '              <a onclick="rem_item('+hard_id+')" style="cursor:pointer;" id="rem'+hard_id+' class="rem_item"">Удалить</a>\n' +
+                  '            </div>\n' +
+                  '            <span class="d-block"><br></span>\n' +
+                  '<input type="hidden" name="hads_id[]" value="'+hard_id+'">' +
+                  '          </div>');
+
+              $('#hardw_select_id').find('option:selected').removeAttr("selected");
+              $('#hardw_select_id').find('option:selected').css('display','none');
+
+
+              $('#hardw_select_id option[value=""]').removeAttr('selected').attr('selected','selected');
+              $('#select_hardw').attr('disabled','disabled');
+
+
+
+          $('.rem_item').click(function () {
+
+              alert($(this).attr('id'));
+
+          });
+
+
+
+          });
+
+
+          $('#hardw_select_id').change(function () {
+
+             if($('#hardw_select_id option:selected').val()!='')
+             {
+                 $('#select_hardw').removeAttr('disabled');
+             }
+             else  $('#select_hardw').attr('disabled','disabled');
+
+          });
+
+
+          $('#select_worker_btn').click(function () {
+
+              var worker_name = $('#worker_select_id').find('option:selected').text();
+              var worker_id = $('#worker_select_id').find('option:selected').val();
+
+              $('#worker_name').html(worker_name);
+              $('#worker_id').val(worker_id);
+              $('#manual_selected').val('True');
+
+              $('#workers').modal('hide');
+
+
+          });
+
+          $('#give_hard_btn').click(function(){
+              alert('sadas');
           });
 
 
