--- a/hardcontrol/templates/hardcontrol/index.html
+++ b/hardcontrol/templates/hardcontrol/index.html
@@ -135,11 +135,11 @@
 
         </div>
         <small class="d-block text-right mt-3" id="in_pocess">
-            <button type="button" class="btn btn-outline-danger" id="input_hard_btn">Принять оборудование</button>
+            <button type="button" class="btn btn-outline-danger" id="input_hard_btn" disabled="disabled">Принять оборудование</button>
         </small>
 
         <small style="display: none;" class="text-right mt-3" id="sucess" >
-                <a type="button" href="/" class="btn btn-outline-success" id="give_hard_btn">Оборудование по списку принято, продолжить</a>
+                <a type="button" href="/" class="btn btn-outline-success" id="">Оборудование по списку принято, продолжить</a>
         </small>
 
       </div>
@@ -160,11 +160,11 @@
 
         </div>
         <small class="d-block text-right mt-3" id="in_pocess">
-                <button type="button" class="btn btn-outline-success" id="give_hard_btn">Выдать оборудование</button>
+                <button type="button" class="btn btn-outline-success" id="give_hard_btn" disabled="disabled">Выдать оборудование</button>
         </small>
 
         <small style="display: none;" class="text-right mt-3" id="sucess" >
-                <a type="button" href="/" class="btn btn-outline-success" id="give_hard_btn">Оборудование по списку выдано, продолжить</a>
+                <a type="button" href="/" class="btn btn-outline-success" id="">Оборудование по списку выдано, продолжить</a>
         </small>
 
       </div>
