--- a/hardcontrol/templates/base.html
+++ b/hardcontrol/templates/base.html
@@ -38,14 +38,18 @@
           <li class="nav-item {% if request.path == url %} active {% endif %}">
             <a class="nav-link" href="{{ url }}">Список операций</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Оборудование</a>
+          <li class="nav-item {% if request.resolver_match.url_name == 'hard_detail' %} active {% endif %}>">
+            <a class="nav-link" href=""> Оборудование </a>
+          </li>
+
+        <li class="nav-item {% if request.resolver_match.url_name == 'worker_detail' %} active {% endif %}>">
+            <a class="nav-link" href="">Сотрудники</a>
           </li>
 
 {#            <li class="nav-item">#}
 {#            <a class="nav-link" href="{% url 'register_user' %}">Добавление сотрудников</a>#}
 {#          </li>#}
-
+<!--
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Формирование отчетов</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
@@ -54,6 +58,7 @@
               <a class="dropdown-item" href="#">Отчет по менеджеру выдачи</a>
             </div>
           </li>
+    -->
         </ul>
       </div>
     </nav>
@@ -89,8 +94,7 @@
 
                 });
 
-          alert('Оборудование принято');
-          window.location.href='/';
+
 
       }
 
@@ -271,11 +275,12 @@
             {##}
             {#$('#sucess').attr('class','d-block text-right mt-3');#}
 
-                alert('Оборудование выдано');
-                window.location.href='/';
+
 
 
             });
+            alert('Оборудование выдано');
+                window.location.href='/';
 
               }
 
@@ -292,7 +297,8 @@
 
              });
 
-
+            alert('Оборудование принято');
+          window.location.href='/';
 
          });
 
