--- a/hardcontrol/templates/hardcontrol/worker_detail.html
+++ b/hardcontrol/templates/hardcontrol/worker_detail.html
@@ -2,16 +2,60 @@
 {% load staticfiles %}
 {% block content %}
 
+
+
     <div class="mt-3 p-3 bg-white rounded box-shadow">
-        <h6 class="border-bottom border-gray pb-2 mb-0">Опции</h6>
+        <h6 class="border-bottom border-gray pb-2 mb-0">Сотрудник</h6>
         <div class="media  pt-3">
 
             <div class="media-body pb-3 mb-0 border-bottom border-gray">
 
+            <h2>{{ user.first_name }} {{ user.last_name }}</h2>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="mt-3 p-3 bg-white rounded box-shadow">
+        <h6 class=" pb-2 mb-0">Оборудование у сотрудника</h6>
+        <div class="media  pt-3">
+
+            <div class="media-body pb-3 mb-0 border-bottom border-gray">
+
+            <table class="media-body pb-3 mb-0 border-bottom border-gray">
+
+            <table class="table">
+                <tr>
+                    <th>
+                         Дата/Время выдачи
+
+                    </th>
+                    <th>
+                       Наименование оборудования
+                    </th>
+                </tr>
 
 
+ {% for list in hard_on_worker %}
+
+<tr>
 
 
+        <td>
+            {{ list.datetime }}
+        </td>
+<td>
+
+        {{ list.hard_id.title }}
+
+</td>
+
+     </tr>
+
+
+ {% endfor  %}
+
+</table>
 
             </div>
         </div>
@@ -19,10 +63,14 @@
 
 
     <div class="mt-3 p-3 bg-white rounded box-shadow">
-        <h6 class="pb-2 mb-0"><b>Операции</b></h6>
+        <h6 class=" pb-2 mb-0">Список операций</h6>
         <div class="media  pt-3">
 
-            <table class="media-body pb-3 mb-0 border-bottom border-gray">
+            <div class="media-body pb-3 mb-0 border-bottom border-gray">
+
+
+
+          <table class="media-body pb-3 mb-0 border-bottom border-gray">
 
             <table class="table">
                 <tr>
@@ -35,9 +83,7 @@
                     <th>
                         Наименование оборудования
                     </th>
-                    <th>
-                        Сотрудник
-                    </th>
+
                     <th>
                         Способ выдачи
                     </th>
@@ -58,15 +104,11 @@
         </td>
 <td>
 
-    <a href="{% url 'hard_detail' list.hard_id.pk %}"> {{ list.hard_id }}</a>
+    <a href="{% url 'hard_detail' list.hard_id.pk %}"> {{ list.hard_id }} </a>
 
 </td>
 
-<td>
-    <a href="{% url 'worker_detail' list.worker_id.pk  %}">
-            {{ list.worker_id.first_name }} {{ list.worker_id.last_name }}
-    </a>
-        </td>
+
 
 <td>
 {% if list.select_auto %}По RFID{% else %}
@@ -82,12 +124,8 @@
 
 </table>
 
-
             </div>
         </div>
     </div>
-
-
-
 
 {% endblock %}
