Авторизация менеджера выдачи, и ссылки на него

--- a/hardcontrol/templates/hardcontrol/hard_detail.html
+++ b/hardcontrol/templates/hardcontrol/hard_detail.html
@@ -58,7 +58,10 @@
                         Сотрудник
                     </th>
                     <th>
-                        Способ выдачи
+                        Способ выбора
+                    </th>
+                    <th>
+                        Менеджер
                     </th>
                 </tr>
 
@@ -88,6 +91,10 @@
 {% if list.select_auto %}По RFID{% else %}
     Вручную
 {% endif %}
+</td>
+
+<td>
+ {{ list.manager_id.first_name }} {{ list.manager_id.last_name }}
 </td>
 
 
