--- a/hardcontrol/templates/base.html
+++ b/hardcontrol/templates/base.html
@@ -61,6 +61,12 @@
     -->
         </ul>
       </div>
+     <ul class="nav navbar-nav float-md-right">
+         <li class="nav-item">
+
+       <a href="{%  url 'exit' %}" class="nav-link">  Вы зашли как:<b> {{ user }} ({{ user.first_name }} {{  user.last_name }}</b>) Выход</a>
+         </li>
+     </ul>
     </nav>
 
 
@@ -82,7 +88,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-  <script language="JavaScript">
+
+    {% ifnotequal user.groups.all.0.name 'Менеджеры выдачи' %}
+
+        <script language="JavaScript">
+
+        window.location.href='/login_page/';
+
+        </script>
+
+    {% endifnotequal %}
+
+
+
+    <script language="JavaScript">
 
 
 
