--- a/hardcontrol/templates/hardcontrol/worker_detail.html
+++ b/hardcontrol/templates/hardcontrol/worker_detail.html
@@ -10,7 +10,7 @@
 
             <div class="media-body pb-3 mb-0 border-bottom border-gray">
 
-            <h2>{{ user.first_name }} {{ user.last_name }}</h2>
+            <h2>{{ worker.first_name }} {{ worker.last_name }}</h2>
 
             </div>
         </div>
@@ -87,6 +87,9 @@
                     <th>
                         Способ выдачи
                     </th>
+                    <th>
+                        Менеджер
+                    </th>
                 </tr>
 
 
@@ -114,6 +117,10 @@
 {% if list.select_auto %}По RFID{% else %}
     Вручную
 {% endif %}
+</td>
+
+<td>
+{{ list.manager_id.first_name }} {{ list.manager_id.last_name }}
 </td>
 
 
