--- a/hardcontrol/templates/hardcontrol/index.html
+++ b/hardcontrol/templates/hardcontrol/index.html
@@ -48,6 +48,7 @@
                 $("#imgResult").html("");
                 $("#div1").hide();
                 $("#div2").hide();
+                unselect_worker();
             }
 
             $(document).ready(function() {
