--- a/hardcontrol/templates/base.html
+++ b/hardcontrol/templates/base.html
@@ -42,8 +42,8 @@
             <a class="nav-link" href="{% url 'hard_list' %}"> Оборудование </a>
           </li>
 
-        <li class="nav-item {% if request.resolver_match.url_name == 'worker_detail' %} active {% endif %}>">
-            <a class="nav-link" href="">Сотрудники</a>
+        <li class="nav-item {% if request.resolver_match.url_name == 'worker_detail' %} active {% endif %} {% if request.resolver_match.url_name == 'worker_list' %} active {% endif %}>">
+            <a class="nav-link" href="{% url 'worker_list' %}">Сотрудники</a>
           </li>
 
 {#            <li class="nav-item">#}
