--- a/hardcontrol/templates/base.html
+++ b/hardcontrol/templates/base.html
@@ -122,18 +122,16 @@
 
       function rem_item(id)
         {
-
             $("#item"+id).remove();
-
             $('#hardw_select_id option[value='+id+']').css('display','block');
-
-
+            check_hardware_list_count();
         }
 
-        function select_worker(worker_id,manual_select)
+        function select_worker(worker_id, manual_select)
         {
-
             var this_worker;
+            $('#hardw_list_output').html('');
+            $('#give_hard_btn').hide();
 
             $.getJSON('get_worker/', {worker_id:worker_id}, function(data){
 
@@ -149,13 +147,13 @@
                 $("#give_hard_btn").removeAttr('disabled');
                 $("#input_hard_btn").removeAttr('disabled');
 
-                });
+            });
 
 
 
-              if(manual_select==1) $('#manual_selected').val('True');
+            if(manual_select==1) $('#manual_selected').val('True');
 
-              $('#workers').modal('hide');
+            $('#workers').modal('hide');
 
         }
 
@@ -174,92 +172,90 @@
         function get_worker_hard(worker_id)
         {
             $('#hardw_list_input').html('');
+            $("#hardware_container").show();
             $.getJSON('get_worker_hard/', {worker_id:worker_id}, function(data1){
 
                 console.log(data1);
+                if (data1.length) {
+                    $("#div1").show();
+                    $.each(data1, function (key, val) {
+                        //  console.log(val.fields.hard_id);
+                        $.getJSON('get_hard_object', {hard_id: val.fields.hard_id}, function (data2) {
 
-                $.each( data1, function( key, val ) {
-
-                 //  console.log(val.fields.hard_id);
-
-                   $.getJSON('get_hard_object', {hard_id:val.fields.hard_id}, function(data2){
-
-                       var date = new Date(val.fields.datetime);
-                       var mon = ('0'+(1+date.getMonth())).replace(/.?(\d{2})/,'$1');
-                       var a=date.toString().replace(/^[^\s]+\s([^\s]+)\s([^\s]+)\s([^\s]+)\s([^\s]+)\s.*$/ig,'$2.'+mon+'.$3 $4');
-
+                            var date = new Date(val.fields.datetime);
+                            var mon = ('0' + (1 + date.getMonth())).replace(/.?(\d{2})/, '$1');
+                            var a = date.toString().replace(/^[^\s]+\s([^\s]+)\s([^\s]+)\s([^\s]+)\s([^\s]+)\s.*$/ig, '$2.' + mon + '.$3 $4');
 
 
+                            {#    $('#hardw_list_input').append(' <div id="item_inp" class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">\n' +#}
+                            {#'            <div class="d-flex justify-content-between align-items-center w-100">\n' +#}
+                            {#'              <strong class="text-gray-dark">'+data2.fields.title+'</strong>\n' +#}
+                            {#'Выдано: '+ a +#}
+                            {#'<input type="checkbox" class="">' +#}
+                            {#'            </div>\n' +#}
+                            {#'            <span class="d-block"><br></span>\n' +#}
+                            {#''+#}
+                            {#'          </div>');#}
 
 
-                  {#    $('#hardw_list_input').append(' <div id="item_inp" class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">\n' +#}
-                  {#'            <div class="d-flex justify-content-between align-items-center w-100">\n' +#}
-                  {#'              <strong class="text-gray-dark">'+data2.fields.title+'</strong>\n' +#}
-                  {#'Выдано: '+ a +#}
-                  {#'<input type="checkbox" class="">' +#}
-                  {#'            </div>\n' +#}
-                  {#'            <span class="d-block"><br></span>\n' +#}
-                  {#''+#}
-                  {#'          </div>');#}
-
-
-                       $('#hardw_list_input').append('<tr id="inputrem'+data2.pk+'"><td>'+data2.fields.title+'</td><td align="center">'+a+'</td><td align="center"><input type="checkbox" disabled="disabled" class=""></td><td align="center"><input type="checkbox" value="'+data2.pk+'" class="select_manual"></td></tr>');
-
-
-
-
-                   });
-
+                            $('#hardw_list_input').append('<tr id="inputrem' + data2.pk + '"><td>' + data2.fields.title + '</td><td align="center">' + a + '</td><td align="center"><input type="checkbox" disabled="disabled" class=""></td><td align="center"><input type="checkbox" value="' + data2.pk + '" class="select_manual"></td></tr>');
 
 
                         });
 
-                });
+
+                    });
+                }
+                else {
+                    $("#div1").hide();
+                }
+
+            });
 
         }
 
+        function check_hardware_list_count() {
+          if ($('.hardware_item').length) {
+              $('#give_hard_btn').show();
+          } else {
+              $('#give_hard_btn').hide();
+          }
+        }
+
+        function insert_hahdware_to_list (hard_name, hard_id) {
+          if ($('.hard_id:input[value="' + hard_id + '"]').length === 0) {
+              $('#hardw_list_output').append(' <div id="item' + hard_id + '" class="hardware_item media-body pb-3 pt-3 mb-0 small lh-125 border-bottom border-gray">\n' +
+                  '            <div class="d-flex justify-content-between align-items-center w-100">\n' +
+                  '              <strong class="text-gray-dark">' + hard_name + '</strong>\n' +
+                  '              <a onclick="rem_item(' + hard_id + ')" style="cursor:pointer;" id="rem' + hard_id + '" class="rem_item"">Удалить</a>\n' +
+                  '            </div>\n' +
+                  '            <span class="d-block"></span>\n' +
+                  '<input type="hidden" class="hard_id" name="hads_id" value="' + hard_id + '">' +
+                  '<input type="hidden" class="not_stock" name="not_stock[]" value="' + hard_name + '">' +
+                  '          </div>');
+
+              $('#hardw_select_id').find('option:selected').removeAttr("selected");
+              $('#hardw_select_id').find('option:selected').css('display', 'none');
 
 
+              $('#hardw_select_id option[value=""]').removeAttr('selected').attr('selected', 'selected');
+              $('#select_hardw').attr('disabled', 'disabled');
+          }
+          check_hardware_list_count();
+        }
 
       $(document).ready(function(){
 
           //Выбор оборудования вручную
 
           $('#select_hardw').click(function () {
-
-
               var hard_name = $('#hardw_select_id').find('option:selected').text();
               var hard_id = $('#hardw_select_id').find('option:selected').val();
 
-
-
-              $('#hardw_list_output').append(' <div id="item'+hard_id+'" class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">\n' +
-                  '            <div class="d-flex justify-content-between align-items-center w-100">\n' +
-                  '              <strong class="text-gray-dark">'+hard_name+'</strong>\n' +
-                  '              <a onclick="rem_item('+hard_id+')" style="cursor:pointer;" id="rem'+hard_id+'" class="rem_item"">Удалить</a>\n' +
-                  '            </div>\n' +
-                  '            <span class="d-block"><br></span>\n' +
-                  '<input type="hidden" class="hard_id" name="hads_id" value="'+hard_id+'">' +
-                  '<input type="hidden" class="not_stock" name="not_stock[]" value="'+hard_name+'">' +
-                  '          </div>');
-
-              $('#hardw_select_id').find('option:selected').removeAttr("selected");
-              $('#hardw_select_id').find('option:selected').css('display','none');
-
-
-              $('#hardw_select_id option[value=""]').removeAttr('selected').attr('selected','selected');
-              $('#select_hardw').attr('disabled','disabled');
-
-
-
-          $('.rem_item').click(function () {
-
-              alert($(this).attr('id'));
-
-          });
-
-
-
+              insert_hahdware_to_list (hard_name, hard_id);
+                //          $('.rem_item').click(function () {
+                //              alert($(this).attr('id'));
+                //          });
           });
 
 
@@ -286,32 +282,29 @@
 
           });
 
-          $('#give_hard_btn').click(function(){
+          $('#give_hard_btn').click(function () {
 
-        if ($('#worker_id').val()!='') {
-
-
-
-            $.each($('.hard_id'),function () {
-
-                $.get('hard_output/', {hard_id: $(this).val(), worker_id:$('#worker_id').val()}, function(data){
-
-                $('#rem'+data).after('<font color=green>Выдано</font>');
-
-                $('#rem'+data).remove();
-
-                });
-
-            {#$('#in_pocess').remove();#}
-            {##}
-            {#$('#sucess').attr('class','d-block text-right mt-3');#}
+              if ($('#worker_id').val() != '') {
 
 
+                  $.each($('.hard_id'), function () {
+
+                      $.get('hard_output/', {hard_id: $(this).val(), worker_id: $('#worker_id').val()}, function (data) {
+
+                          $('#rem' + data).after('<font color=green>Выдано</font>');
+
+                          $('#rem' + data).remove();
+
+                      });
+
+                      {#$('#in_pocess').remove();#}
+                      {##}
+                      {#$('#sucess').attr('class','d-block text-right mt-3');#}
 
 
-            });
-            alert('Оборудование выдано');
-                window.location.href='/';
+                  });
+                  alert('Оборудование выдано');
+                  window.location.href = '/';
 
               }
 
